<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sortby"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filterby"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_action"
        android:icon="@drawable/ic_action_on"
        android:visible="false"
        android:title="@string/enable_disable"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_add_image"
        app:showAsAction="always"
        android:title="@string/add"
        android:visible="false"
        android:orderInCategory="100"/>
</menu>
