<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_shadow"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/send_withdrawal_request"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/withdrawal_amount"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/edtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_optional"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/cancel"
            android:background="@color/light_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/txt_color" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvDialogSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/send"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/wallet_withdrawal_request_alert"
        android:textColor="@color/red" />
</LinearLayout>