<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytOrderTracker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shadow">

    <RelativeLayout
        android:id="@+id/lyt_order1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvCustomerOrderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/order_no"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCustomerOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/order_date"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/lyt_order1"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/lyt_order2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp">

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/customer_name"
            app:drawableStartCompat="@drawable/ic_user" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            app:cardBackgroundColor="@color/delivered_status_bg"
            app:cardCornerRadius="@dimen/_5sdp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/status"
                android:textColor="@color/status_text"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_order2"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCustomerMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/mobile_no"
            app:drawableStartCompat="@drawable/ic_mobile" />


        <TextView
            android:id="@+id/tvCustomerPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/order_method"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>