<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/lyt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/lytSearchview"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorPrimary"
                    android:visibility="gone">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/bg_search"
                        android:queryHint="Search Here" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lytSearchview"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:text="@string/start_date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/disable_btn"
                        android:text="@string/end_date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lytApply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lytDate"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/disable_btn"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnApply"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:text="@string/apply"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                android:background="@color/bg_color"
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/lytApply" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data_found"
        android:visibility="gone" />

</RelativeLayout>